news images in tags fix + empty lines in css + stretch image in news-page
in /news page looks good, but add class for future.

--- a/garnahata_site/catalog/static/css/news.css
+++ b/garnahata_site/catalog/static/css/news.css
@@ -72,7 +72,7 @@ h2.green {
 
 .overImage img {
     position: relative;
-    width:auto;
+    width: 100%;
 }
 
 .topNewsContainer a {
